--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -5,14 +5,23 @@
     display: flex;
     width: 100vw;
     height: 100vh;
+   
 
     .dev, .gaming {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        position: relative;
-        overflow: hidden;
+        a {
+            width: 100%;
+            height: 100%;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            position: relative;
+            overflow: hidden;
+            text-decoration: none;
+        }
+        
+        @include transition(width, 500ms);
 
         img {
             width: 100px;
@@ -46,18 +55,19 @@
     }
 
     .gaming {
-        color: black;
+        a {
+            color: black;
+        }
         width: 50%;
     }
 
 
 
-    header {
+    aside {
         position: absolute;
         top: 40px;
-        left: 50%;
+        left: 0px;
         width: 100vw;
-        transform: translateX(-25%);
         z-index: 4;
         text-align: center;
         h1 {
@@ -65,22 +75,36 @@
         }
     }
 
+
+
     .gaming {
-        header {
-            left: -50%;
+        aside {
+            left: auto;
+            right: 0px;
         }
+
     }
 
 
 
     &.gaming {
         .gaming {
-            width: 100%;
+            width: 80%;
         }
 
         .dev {
-            width: 0%;
+            width: 20%;
         }
     }
+
+
+    .gaming:hover {
+        width: 80%;
+    }
+
+    .dev:hover {
+        width: 80%;
+    }
+
 
 }
